tests-e2e/tests/snapshots/cli__rejects_lsp_config_file.snap
---
source: tests-e2e/tests/cli.rs
---
status: 2
--- stdout
--- stderr
error: unexpected argument '--config-file' found

Usage: iris lsp [FLAGS]

For more information, try '--help'.
