tests-e2e/tests/snapshots/cli__v2_add_requires_dependencies.snap
---
source: tests-e2e/tests/cli.rs
---
status: 2
--- stdout
--- stderr
error: the following required arguments were not provided:
  <DEPENDENCY>…

Usage: iris-v2 add [-p --package <NAME>] [--test] <DEPENDENCY>…

For more information, try '--help'.
