tests-e2e/tests/snapshots/cli__v2_help_build.snap
---
source: tests-e2e/tests/cli.rs
---
status: 0
--- stdout
Build a Spago workspace or package.

Usage: iris-v2 build [FLAGS]

Flags:
  -p, --package <NAME>  Workspace package to build.
  -o, --output <DIR>    Output directory. Defaults to output in the workspace root.
  -q, --quiet           Suppress build progress and Spago output.
      --color <COLOR>   When to use colors in diagnostics and progress output.
                        [possible values: auto, always, never]
                        (default: auto)
      --resilient       Write JavaScript output even when compilation reports errors.
      --no-diagnostics  Suppress compiler warnings and errors without hiding build progress.
  -h, --help            Print help
--- stderr
