tests-e2e/tests/snapshots/cli__v2_help_lsp.snap
---
source: tests-e2e/tests/cli.rs
---
status: 0
--- stdout
Run the language server over standard input and output.

Usage: iris-v2 lsp [FLAGS]

Flags:
      --stdio                 Use standard input and output for LSP transport.
      --query-log <LEVEL>     Log level for the query engine.
                              [possible values: off, error, warn, info, debug, trace]
                              (default: off)
      --checking-log <LEVEL>  Log level for the type checker.
                              [possible values: off, error, warn, info, debug, trace]
                              (default: off)
      --lsp-log <LEVEL>       Log level for the language server.
                              [possible values: off, error, warn, info, debug, trace]
                              (default: info)
      --config <JSON>         Language server configuration as a JSON object, read once at startup.
      --config-file <PATH>    Language server configuration file, relative to the working directory.
  -h, --help                  Print help
--- stderr
