tests-e2e/tests/snapshots/cli__v2_help_new.snap
---
source: tests-e2e/tests/cli.rs
---
status: 0
--- stdout
Create a Spago project in the current directory.

Usage: iris-v2 new [--name <NAME>]

Flags:
      --name <NAME>  Package name. Defaults to the current directory name.
  -h, --help         Print help
--- stderr
