tests-e2e/tests/snapshots/cli__v2_help_root.snap
---
source: tests-e2e/tests/cli.rs
---
status: 0
--- stdout
iris-v2 0.1.0
Experimental PureScript compiler command-line interface.

Usage: iris-v2 <SUBCOMMAND>

Commands:
  add    Add dependencies to a Spago package.
  build  Build a Spago workspace or package.
  lsp    Run the language server over standard input and output.
  new    Create a Spago project in the current directory.
  help   Print this message or the help of the given subcommand(s)

Flags:
  -h, --help     Print help
  -V, --version  Print version
--- stderr
